# ebac-bookstore

./: .gitignore  Dockerfile  Makefile  README.md  deploy.py  docker-compose.yml  flake_out.txt  pyproject.toml
.github/workflows/: build.yml  deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: index.html
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_serializers.py
order/tests/test_serializers/: test_order_serializers.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_descripition_category_description.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_models.py  test_serializers.py
product/tests/test_serializers/: test_serializers.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
